minor improvements to the OverviewsEmbedder
git-svn-id: http://svn.osgeo.org/geotools/trunk@35481 e5c1c795-43da-0310-a71f-fac65c449510